--- a/css/style.scss
+++ b/css/style.scss
@@ -181,7 +181,7 @@ header{
         display: flex;
         position: relative;
         flex-direction: column;
-        width: 20%;
+        width: 20vw;
         padding: 5px;
         margin-top: 10vh;
         a{
@@ -222,9 +222,50 @@ header{
         }
     }
     .Conteudo{
-        width: 60%;
-        border: green 2px solid;
+        width: 60vw;
         margin-top: 10vh;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 0 10px;
+        .mainPhoto{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            padding: 1vw 0;
+            img{
+                width: 45vw;
+            }
+        }
+        .mainText{
+            padding: 1vw;
+            padding-bottom: 0;
+            margin: 1vw 0;
+            p{
+                color: white;   
+                font-family: 'Arial';
+                font-style: normal;
+            }
+        }
+        .galery{
+            width: 100%;
+            display: flex;
+            position: relative;
+            justify-content: center;
+            flex-wrap: wrap;
+            .imgBlock{
+                display: flex;
+                padding: 1vw;
+                width: 50%;
+                align-items: center;
+                justify-content: center;
+                
+                img{
+                    width: 100%;
+                    height: auto;
+                }
+            }
+        }
     }
 }
 
