--- a/css/style.scss
+++ b/css/style.scss
@@ -181,7 +181,7 @@ header{
         display: flex;
         position: relative;
         flex-direction: column;
-        width: 20vw;
+        width: 15vw;
         padding: 5px;
         margin-top: 10vh;
         a{
@@ -222,19 +222,19 @@ header{
         }
     }
     .Conteudo{
-        width: 60vw;
+        width: 70vw;
         margin-top: 10vh;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        padding: 0 10px;
+        align-items: center;
         .mainPhoto{
             width: 100%;
             display: flex;
             justify-content: center;
             padding: 1vw 0;
             img{
-                width: 45vw;
+                width: 95%;
             }
         }
         .mainText{
@@ -265,6 +265,14 @@ header{
                     height: auto;
                 }
             }
+        }
+        .FichaTecnica{
+            position: absolute;
+            background-color: #EDFAC9;
+            width: 99.35vw;
+            height: 85vh;
+            bottom: -90vh;
+            left: -0.2vw;
         }
     }
 }
