--- a/css/style.scss
+++ b/css/style.scss
@@ -41,8 +41,8 @@ header{
     height: 35px;
     justify-content: center;
     align-items: center;
-    z-index: 1;
-    .scroll1{
+    z-index: 10;
+    .scroll{
         height: 100%;
         .marqueeText {
             display: flex;
@@ -55,9 +55,12 @@ header{
             font-weight: 600;
             letter-spacing: -0.035em;
             padding-right: 40px;
-            a{
+            .mainLink{
                 color: #3A0000;
                 margin: 0 5px;
+            }
+            a{
+                color: #FF4500;
             }
             img{
                 position: absolute;
@@ -68,7 +71,10 @@ header{
             }
         }
         .blue{
-            color: #36B7FF; 
+            color: #36B7FF;
+            a{
+                color: #36B7FF;
+            }
         }
     }
     
@@ -144,13 +150,12 @@ header{
     display: flex;
     position: relative;
     width: 100%;
-    height: 100px;
-    top: 5px;
+    height: 80px;
     z-index: 10;
-    .scroll{
+    .scroll1{
         height: 100%;
         .marqueeText {
-            padding: 0 20px;
+            padding: 0 0.75vw;
             color: #FF4500;
             font-family: 'Franklin Gothic Heavy';
             font-style: normal;
@@ -167,7 +172,7 @@ header{
 
 .fixed{
     position: fixed !important;
-    top: 0;
+    top: 35px;
 }
 
 .blockImgs{
@@ -176,14 +181,13 @@ header{
     flex-direction: row;
     width: 99vw;
     padding: 0.5vw;
-    margin-top: 1vh;
     .ColunaImgs{
         display: flex;
         position: relative;
         flex-direction: column;
         width: 15vw;
         padding: 5px;
-        margin-top: 10vh;
+        margin-top: 7vh;
         a{
             display: flex;
             align-items: center;
@@ -223,11 +227,14 @@ header{
     }
     .Conteudo{
         width: 70vw;
-        margin-top: 10vh;
+        margin-top: 7vh;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        h1{
+            display: none;
+        }
         .mainPhoto{
             width: 100%;
             display: flex;
@@ -270,13 +277,40 @@ header{
             position: absolute;
             background-color: #EDFAC9;
             width: 99.35vw;
-            height: 85vh;
-            bottom: -90vh;
+            height: 83vh;
+            bottom: -100vh;
             left: -0.2vw;
         }
     }
 }
 
 .imgs{
-    margin-top: 16vh;
+    margin-top: 12vh;
+}
+
+.ficha{
+    background-color: #EDFAC9;
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 115px;
+    z-index: 11;
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+    .scroll2{
+        height: 100%;
+        .marqueeText {
+            padding: 0 0.75vw;
+            color: #FF4500;
+            font-family: 'Franklin Gothic Heavy';
+            font-style: normal;
+            font-weight: 600;
+            letter-spacing: -0.035em;
+            font-size: 5vw;
+        }
+        .blue{
+            color: #36B7FF; 
+        }
+    }
 }
